[package]
name = "macroex-extras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroex = { version = "^0.1.5", default-features = false }
parse-color = "^0.1.2"
quote = { version = "^1", default-features = false }
