[package]
name = "macroex-extras"
authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/macroex-extras"
description = """
Additional "fun" extractors for macroex. Support crate for a certain in development UI crate.
"""
keywords = ["macros", "deserialize"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroex = { version = "^0.1.5", default-features = false }
parse-color = "^0.1.2"
quote = { version = "^1", default-features = false }
